welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: illegal start of simple expression
  while(getX()!= getMondeLargeur()-1   && getY() != getMondeHauteur()-1)){
                                                                        ^